Fixed spacing of words

--- a/styles/welcome.css
+++ b/styles/welcome.css
@@ -1,5 +1,18 @@
 body {
+  text-align: center;
+  background-color: #123e5b;
   font-family: 'Neucha', cursive;
-  margin: 3vw;
-  color: lightblue;
+  color: #abcdcc;
+}
+
+h1 {
+  font-size: 50px;
+  color: #abcdcc;
+}
+
+#title {
+  font-size: 100px;
+  margin-block-end: 0;
+  margin-block-start: 0;
+  color: #faf2d8;
 }
